fixed pre wrapping

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -87,11 +87,11 @@ nav a:hover {
 }
 
 pre {
-    background: #f4f4f4;
-    border: 1px solid #ddd;
-    border-left: 3px solid #f36d33;
-    color: #666;
-    page-break-inside: avoid;
+    background: #3f3f3f;
+    border: 1px solid var(--default-text);
+    border-left: 3px solid #e4d656;
+    color: rgb(192, 192, 192);
+    page-break-inside: auto;
     font-family: monospace;
     font-size: 15px;
     line-height: 1.6;
@@ -100,7 +100,8 @@ pre {
     overflow: auto;
     padding: 1em 1.5em;
     display: block;
-    word-wrap: break-word;
+    word-wrap:break-word;
+    white-space: pre-wrap;
 }
 
 
